--- a/Desafio_enem.ipynb
+++ b/Desafio_enem.ipynb
@@ -1432,7 +1432,7 @@
     }
    ],
    "source": [
-    "# Média antes de remover os outliers \n",
+    "# Média com os outliers \n",
     "\n",
     "df_ciencias_redacao_outliers = df_ciencias_redacao\n",
     "\n",
